# investment-portfolio

./: .pre-commit-config.yaml  LICENSE  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py  tasks.py
docs/: api.rst  basic_tutorial.rst  conf.py  how_to_install.rst  index.rst
src/investporto/: ARCH.md  __init__.py  __main__.py  cli.py  portfolio_plan_cli.py  portofolio_plan_cli.py  project_meta_cli.py  types_and_vars.py
tests/: test_portfolio_plan_cli.py  test_project_meta_cli.py
